hash router test

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfoliosvh",
-  "homepage": "https://danki120.github.io/PortfolioSVH-React/",
+  "homepage": "https://danki120.github.io/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
